ctowasm/test/samples/error/non_struct_pointer_member_access.c
int main() {
  int *x;
  x->field;
}